# glitchtip

./: 01-automatically-accept-open-inivitations-at-login.patch  01-relate-users.patch  Dockerfile  Dockerfile.acceptance  Makefile  README.md  build_deploy.sh  docker-compose.yml  pr_check.sh  pyproject.toml  renovate.json  requirements-acceptance.txt  requirements-dev.txt
.tekton/: glitchtip-acceptance-main-pull-request.yaml  glitchtip-acceptance-main-push.yaml  glitchtip-main-pull-request.yaml  glitchtip-main-push.yaml
acceptance/: conftest.py  test_organizations.py  test_project_alerts.py  test_projects.py  test_teams.py  test_users.py
appsre/: cleanup-notifications.py  create-api-users.py
grafana/: grafana-dashboard-glitchtip.configmap.yaml  grafana-dashboard.yml  grafana-django.yml  grafana-project.yml  grafana-projects.yml  grafana-slo.yml
openshift/: acceptance.yaml  template.autoscaler.yaml  template.yaml
patches/: 00-do-not-send-invitation-emails.patch  00-skip-user-invitation-process.patch  01-automatically-accept-open-inivitations-at-login.patch  02-support-multiple-alerts.patch  03-fix-openid-auth.patch  03-limit-tags-size.patch  04-aws-s3-endpoint-url.patch  05-bug-team-api-fix-add_team_to_project-and-delete_team.patch  05-statsv2-schema.patch  06-settings.patch  06-wsgi.patch  07-events-counter.patch  08-ingest-prometheus-middleware.patch  09-prometheus-metrics.patch
